# python_project_structure

./: .gitignore  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: config.py
src/app/: __main__.py  main.py
src/app/domain/: __init__.py
src/app/domain/filesystem/: __init__.py  schemas.py
src/config/: settings.toml
